# concurrentes_p1

./: CMakeLists.txt  LICENSE  README.md
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/: segments_1
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
code/: DetalleDePartidos.cpp  DetalleDePartidos.h  Marea.cpp  Marea.h  Pareja.cpp  Pareja.h  Participante.cpp  Participante.h  Predio.cpp  Predio.h  Resultados.cpp  Resultados.h  Torneo.cpp  Torneo.h  main.cpp  persona.cpp
code/Model/: DetalleDePartidos.cpp  DetalleDePartidos.h  Marea.cpp  Marea.h  Pareja.cpp  Pareja.h  Participante.cpp  Participante.h  ParticipanteFactory.cpp  ParticipanteFactory.h  Predio.cpp  Predio.h  Resultados.cpp  Resultados.h  Torneo.cpp  Torneo.h
code/main/: MainProcess.cpp  MainProcess.h
code/utils/ipc/lock/: LockFile.cpp  LockFile.h
code/utils/logger/: Logger.cpp  Logger.h
config/: config
